// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ComboboxInput /> create combobox input 1`] = `
<div>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input-group__input"
            placeholder="Select Fruit"
            type="text"
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              className="fd-button--light sap-icon--navigation-down-arrow fd-input-group__button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ComboboxInput /> create combobox input 2`] = `
<div
  className="blue"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          className="fd-input-group"
          onClick={[Function]}
        >
          <input
            className="fd-input fd-input--compact fd-input-group__input"
            placeholder="Select Fruit"
            type="text"
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--button"
          >
            <button
              className="fd-button--light fd-button--compact sap-icon--navigation-down-arrow fd-input-group__button"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
